# c-rust-kani

./: .gitignore  CMakeLists.txt  Cargo.toml  Kani_Runs.md  README.md  cbindgen.toml
cmake/: SeaHornBuild.cmake
scripts/: add-job  rust-jobs.json
src/: CMakeLists.txt
src/rust-jobs/: CMakeLists.txt  log.txt
src/rust-jobs/add/: CMakeLists.txt  Cargo.toml  lib.rs  main.rs
src/rust-jobs/borsh/: Cargo.toml
src/rust-jobs/borsh-enum/: lib.rs
src/rust-jobs/borsh-option/: lib.rs
src/rust-jobs/copy_stack_buffer/: lib.rs
src/rust-jobs/custom-print-no-std/: lib.rs
src/rust-jobs/custom-print-writer/: lib.rs
src/rust-jobs/custom-vec/: lib.rs
src/rust-jobs/custom-vec-drain/: lib.rs
src/rust-jobs/custom-vec-final/: lib.rs
src/rust-jobs/custom-vec-loop-unroll/: lib.rs
src/rust-jobs/custom-vec-raw_vec/: lib.rs
src/rust-jobs/custom-vec-zst-alignment-issue/: lib.rs
src/rust-jobs/empty-print/: lib.rs
src/rust-jobs/enum-as-param/: lib.rs
src/rust-jobs/mut_ref_on_stack/: Cargo.toml  lib.rs
src/rust-jobs/option/: lib.rs
src/rust-jobs/option-and-then/: lib.rs
src/rust-jobs/option-is-some-and/: lib.rs
src/rust-jobs/option-or/: lib.rs
src/rust-jobs/option-unwrap-or/: lib.rs
src/rust-jobs/option-vec-map/: lib.rs
src/rust-jobs/panic-test/: lib.rs
src/rust-jobs/pointer/: Cargo.toml  lib.rs  main.rs
src/rust-jobs/pointer_same_arg/: CMakeLists.txt  Cargo.toml  lib.rs
src/rust-jobs/read_across_f/: Cargo.toml  lib.rs
src/rust-jobs/result-and_then/: lib.rs
src/rust-jobs/result-as_deref/: lib.rs
src/rust-jobs/result-cloned/: lib.rs
src/rust-jobs/result-copied/: lib.rs
src/rust-jobs/result-iter_mut/: lib.rs
src/rust-jobs/result-transpose/: lib.rs
src/rust-jobs/result-unwrap_or_else/: lib.rs
src/rust-jobs/ro_shared_references/: Cargo.toml  lib.rs
src/rust-jobs/sea-vec/: lib.rs
src/rust-jobs/serde/: lib.rs
src/rust-jobs/smallvec/: lib.rs
src/rust-jobs/smallvec-allocation/: lib.rs
src/rust-jobs/smallvec-allocation-bound2/: lib.rs
src/rust-jobs/smallvec-allocation-bound4/: lib.rs
src/rust-jobs/smallvec-allocation-bound8/: lib.rs
src/rust-jobs/smallvec-bound2/: lib.rs
src/rust-jobs/smallvec-bound4/: lib.rs
src/rust-jobs/smallvec-bound8/: lib.rs
src/rust-jobs/smallvec-grow-error/: lib.rs
src/rust-jobs/string/: lib.rs
src/rust-jobs/tinyvec-arrayvec/: lib.rs
src/rust-jobs/tinyvec-remove-error/: lib.rs
src/sea-lib/src/: seahorn.rs
src/verifier/src/: Cargo.toml  lib.rs
src/verifier/verifier_macro/: Cargo.toml  lib.rs
