add_subdirectory(add)
add_subdirectory(borsh)
add_subdirectory(borsh-enum)
add_subdirectory(borsh-option)
add_subdirectory(borsh-primitives)
add_subdirectory(borsh-structs)
add_subdirectory(copy_stack_buffer)
add_subdirectory(custom-print)
add_subdirectory(custom-print-no-std)
add_subdirectory(custom-print-writer)
add_subdirectory(custom-vec)
add_subdirectory(custom-vec-drain)
add_subdirectory(custom-vec-final)
add_subdirectory(custom-vec-loop-unroll)
add_subdirectory(custom-vec-raw_vec)
add_subdirectory(custom-vec-zst-alignment-issue)
add_subdirectory(empty-print)
add_subdirectory(enum-as-param)
add_subdirectory(mut_ref_on_stack)
add_subdirectory(pointer)
add_subdirectory(pointer_same_arg)
add_subdirectory(read_across_f)
add_subdirectory(ro_shared_references)
