cargo-features = ["profile-rustflags"]

[package]
name = "pointer-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
path = "main.rs"


[features]
default = []  # Specify other default features here, if any
panic_handler = []